--- a/back/css/MainBeck_style.css
+++ b/back/css/MainBeck_style.css
@@ -17,7 +17,7 @@ body {
     width: 100%;
     height: 800px;
     perspective: 1000px;
-    margin-top: 70px;
+    margin-top: 250px;
     overflow: hidden;
 }
 
@@ -132,7 +132,14 @@ body {
 
 /* coming soon */
 .comingsoon {
+    width: 100%;
+    min-height: 800px;
     padding-top: 200px;
+    position: relative;
+    overflow: hidden;
+}
+
+.comingsoon .inner {
     position: relative;
 }
 
@@ -142,6 +149,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    z-index: 10;
 }
 
 .comingsoon .inner .top h2 {
@@ -164,11 +173,22 @@ body {
     font-size: 18px;
 }
 
+.CScontents1,
+.CScontents2,
+.CScontents3 {
+    position: absolute;
+    top: 106px;
+    left: 0;
+    width: 100%;
+    transition: opacity 0.8s ease-in-out;
+}
+
 .comingsoon .inner img {
     border-radius: 0 300px 0 0;
 }
 
 .comingsoon .inner .txt {
+    width: 100%;
     font-size: 40px;
     color: var(--Wcolor);
     text-transform: uppercase;
@@ -1267,6 +1287,8 @@ body {
     transform: scale(1.05);
     box-shadow: 0 5px 15px rgba(255, 255, 255, 0.3);
 }
+
+
 
 /* LATEST NEWS */
 .LatestNews {
